--- a/.github/workflows/auto-scraping.yaml
+++ b/.github/workflows/auto-scraping.yaml
@@ -3,16 +3,17 @@ name: daily_ticket_scrape
 ### controlling when the action will run
 on:
   schedule:
-    - cron:   '50 17 * * *'
+    - cron:   '55 17 * * *'
     
 jobs:
-  autoscrape:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: r-lib/actions/setup-r@v2
-      with:
-        r-version: '4.3.3'
+      - uses: actions/checkout@v4
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3.3'
     
     env:
       SEATGEEK_CLIENT_ID: ${{secrets.SEATGEEK_CLIENT_ID}}
