--- a/.github/workflows/auto-scraping.yaml
+++ b/.github/workflows/auto-scraping.yaml
@@ -1,44 +1,46 @@
 name: daily_ticket_scrape
 
-### controlling when the action will run
 on:
   schedule:
-    - cron:   '55 17 * * *'
-    
+    - cron:   '15 18 * * *'
+
+name: gh_seatgeek
+
 jobs:
-  build:
+  gh_seatgeek:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: '4.3.3'
-    
     env:
       SEATGEEK_CLIENT_ID: ${{secrets.SEATGEEK_CLIENT_ID}}
       SEATGEEK_CLIENT_SECRET: ${{secrets.SEATGEEK_CLIENT_SECRET}}
       OWM_API_KEY: ${{secrets.OWM_API_KEY}}
-    
-    ### setting up R
-    - name: Install Packages
-      run: |
-        R -e 'install.packages("tidyverse")
-        R -e 'install.packages("httr")
-        R -e 'install.packages("data.table")
-        R -e 'install.packages("usethis")
-        R -e 'install.packages("jsonlite")
-        R -e 'install.packages("tidyr")
-    - name: daily_scrape
-      run: ticket_scrape_function.R
+      REPO_KEY: ${{secrets.GITHUB_TOKEN}}
+      username: github-actions
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+        
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        
+      - name: Install dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
       
-    - name: Commit files
-      run: |
-        git config --local user.name actions-user
-        git config --local user.email "actions@github.com"
-        git add daily_data/*
-        git commit -m "GH Daily Run $(date)"
-        git push origin main
-      env:
-        REPO_KEY: ${{secrets.GITHUB_TOKEN}}
-        username: github-actions
+      - name: Install Packages
+        run: |
+          R -e 'install.packages("tidyverse")
+          R -e 'install.packages("httr")
+          R -e 'install.packages("data.table")
+          R -e 'install.packages("usethis")
+          R -e 'install.packages("jsonlite")
+          R -e 'install.packages("tidyr")
+      
+      - name: daily_scrape
+        run: ticket_scrape_function.R
+      
+      - name: Commit files
+        run: |
+          git config --local user.name actions-user
+          git config --local user.email "actions@github.com"
+          git add daily_data/*
+          git commit -m "GH Daily Run $(date)"
+          git push origin
