--- a/.github/workflows/auto-scraping.yaml
+++ b/.github/workflows/auto-scraping.yaml
@@ -2,7 +2,7 @@ name: daily_ticket_scrape
 
 on:
   schedule:
-    - cron:   '25 13 * * *'
+    - cron:   '35 21 * * *'
 
 jobs:
   auto-scrape:
@@ -30,7 +30,7 @@ jobs:
           R -e 'install.packages("tidyr")'
       
       - name: daily_scrape
-        run: Rscript -e './ticket_scrape_function.R'
+        run: Rscript ./ticket_scrape_function.R
       
       - name: Commit files
         run: |
