--- a/.github/workflows/auto-scraping.yaml
+++ b/.github/workflows/auto-scraping.yaml
@@ -2,56 +2,55 @@ name: daily_ticket_scrape
 
 on:
   schedule:
-    - cron:   '55 13 * * *'
+    - cron: '20 14 * * *'
 
 jobs:
   auto-scrape:
     runs-on: ubuntu-latest
     env:
-      SEATGEEK_CLIENT_ID: ${{secrets.SEATGEEK_CLIENT_ID}}
-      SEATGEEK_CLIENT_SECRET: ${{secrets.SEATGEEK_CLIENT_SECRET}}
-      OWM_API_KEY: ${{secrets.OWM_API_KEY}}
-      REPO_KEY: ${{secrets.GITHUB_TOKEN}}
+      SEATGEEK_CLIENT_ID: ${{ secrets.SEATGEEK_CLIENT_ID }}
+      SEATGEEK_CLIENT_SECRET: ${{ secrets.SEATGEEK_CLIENT_SECRET }}
+      OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
+      REPO_KEY: ${{ secrets.GITHUB_TOKEN }}
       username: github-actions
       permission:
         contents: write
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-        
+
       - name: Install R
         uses: r-lib/actions/setup-r@v2
-        
+
       - name: Install Packages
-         run: |
-           'install.packages("dplyr")'
-           'install.packages("tidyr")'
-           'install.packages("jsonlite")'
-           'install.packages("lubridate")'
-           'install.packages("vroom")'
-           'install.packages("httr")'
-           'install.packages("rvest")'
-           'install.packages("data.table")'
-         shell: Rscript{0}
-        
+        run: |
+          install.packages("dplyr")
+          install.packages("tidyr")
+          install.packages("jsonlite")
+          install.packages("lubridate")
+          install.packages("vroom")
+          install.packages("httr")
+          install.packages("rvest")
+          install.packages("data.table")
+        shell: Rscript {0}
+
       - name: Packages Installed Check
-         run: |
-          if(!require("dplyr")) { stop("dplyr not installed") }
-          if(!require("tidyr")) { stop("tidyr not installed") }
-          if(!require("jsonlite")) { stop("jsonlite not installed") }
-          if(!require("lubridate")) { stop("lubridate not installed") }
-          if(!require("vroom")) { stop("vroom not installed") }
-          if(!require("httr")) { stop("httr not installed") }
-          if(!require("rvest")) { stop("rvest not installed") }
-          if(!require("data.table")) { stop("data.table not installed") }
-        shell: Rscript{0}
-          
-      
+        run: |
+          if (!require("dplyr")) { stop("dplyr not installed") }
+          if (!require("tidyr")) { stop("tidyr not installed") }
+          if (!require("jsonlite")) { stop("jsonlite not installed") }
+          if (!require("lubridate")) { stop("lubridate not installed") }
+          if (!require("vroom")) { stop("vroom not installed") }
+          if (!require("httr")) { stop("httr not installed") }
+          if (!require("rvest")) { stop("rvest not installed") }
+          if (!require("data.table")) { stop("data.table not installed") }
+        shell: Rscript {0}
+
       - name: daily_scrape
         run: Rscript ./ticket_scrape_function.R
-      
+
       - name: Commit files
-         run: |
+        run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
           git add ./daily_data/*
